# Cmake-Extensions

./: .gitignore  AUTHORS  CMakeLists.txt  CxCopy.cmake  CxCopy2.cmake  CxFileCopy.cmake  LICENSE  README.md  VERSION.md
Data/Shaders/: basic.frag  basic.vert
Deprecated/: CxCopy.cmake
Examples/: CMakeLists.txt
Examples/Project01/: CMakeLists.txt  main.c
Source/CxCopy/: CMakeLists.txt
Source/CxCopy2/: CMakeLists.txt
Source/CxFileCopy/: CMakeLists.txt
cmake/: CxCopy.cmake  CxFileCopy.cmake  CxShaderCompile.cmake
